fix a big with image alignment with caption #52

--- a/style.css
+++ b/style.css
@@ -792,6 +792,12 @@ padding-right: 40px;
 	margin-right: auto;
 }
 
+.wp-caption > img {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
 .wp-caption-text {
 	text-align:center;
 }
